<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/fragment_scanner_result_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/result_text"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn"
            app:icon="@drawable/baseline_search_24"
            app:iconGravity="top"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginHorizontal="16dp"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_btn"
            app:icon="@drawable/baseline_open_in_browser_24"
            app:iconGravity="top"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/open_link"
            android:layout_marginEnd="16dp"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copy_btn"
            app:icon="@drawable/baseline_content_copy_24"
            app:iconGravity="top"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/copy_text"
            android:layout_marginEnd="16dp"
            android:visibility="gone"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_btn"
            app:icon="@drawable/baseline_share_24"
            app:iconGravity="top"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginEnd="16dp"
            android:visibility="gone"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="75dp"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanBtn"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            app:icon="@drawable/baseline_qr_code_scanner_24"
            app:iconGravity="top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>

